# davidson-cpp-electromagnetics

./: .gitignore  README.md  ROADMAP.md  TRANSLATION_MATRIX.md  davidson-cpp-electromagnetics.code-workspace  main.cpp
Cap_02/: CMakeLists.txt  README.md  TESTE.MD
Cap_02/include/: gaussder.hpp
Cap_02/scripts/: plot_fdtd_results.py  plot_fdtd_wb_results.py
Cap_02/src/: fdtd_1D_WB_demo.cpp  fdtd_1D_demo.cpp  gaussder.cpp  gaussder_norm.hpp
Cap_03/: CMakeLists.txt  README.md  main_fdtd2d.cpp  main_fdtd2d_pml.cpp  main_fdtd3d.cpp
Cap_03/include/: fdtd2d.hpp  fdtd2d_pml.hpp  fdtd3d.hpp  gaussder.hpp
Cap_03/scripts/: cyl_test.py  plot_fdtd3d_fft.py  plot_fdtd_ey.py  pml_performance.py
Cap_03/src/: fdtd2d.cpp  fdtd2d_pml.cpp  fdtd3d.cpp  fdtd_2d_demo.cpp  gaussder.cpp
Cap_04/: CMakeLists.txt  MoM_2D_TM.cpp  README.md  static_mom.cpp  thin_dipole.cpp
Cap_04/include/: cyl_tm_echo_width.hpp  mom_tm_solver.hpp
Cap_04/scripts/: plot_cap04.py
Cap_04/src/: cyl_tm_echo_width.cpp  mom_tm_solver.cpp
Cap_06/: CMakeLists.txt  MoM3D_demo.cpp  README.md  converge_sphereRCS.cpp
Cap_06/include/: ComputeRho_c.hpp  FillVVector.hpp  FillZMatrixByEdge.hpp  FillZMatrixByFace.hpp  GL_quad_rule.hpp  Int_pq.hpp  PostProcMoM.hpp  edge_conx_elem.hpp  edgemake_MoM.hpp  find_local_dofs.hpp  hat.hpp  intg_sing_SGF.hpp  mom3d_globals.hpp  outside_edge.hpp  renumber_RWG.hpp  simplex_area.hpp  sphereRCS.hpp  tri_area3D.hpp  tri_quad.hpp  trimesh3D.hpp
Cap_06/scripts/: plot_cap06.py
Cap_06/src/: ComputeRho_c.cpp  FillVVector.cpp  FillZMatrixByEdge.cpp  FillZMatrixByFace.cpp  GL_quad_rule.cpp  Int_pq.cpp  PostProcMoM.cpp  edge_conx_elem.cpp  edgemake_MoM.cpp  find_local_dofs.cpp  hat.cpp  intg_sing_SGF.cpp  mom3d_globals.cpp  outside_edge.cpp  renumber_RWG.cpp  simplex_area.cpp  sphereRCS.cpp  tri_area3D.cpp  tri_quad.cpp  trimesh3D.cpp
Cap_07/: CMakeLists.txt  MoM_Som.cpp  README.md  V_pot_eps.cpp  V_pot_height.cpp  scalar_pot.cpp
Cap_07/include/: chapter7_common.hpp  chapter7_functions.hpp
Cap_07/scripts/: plot_cap07.py
Cap_07/src/: D_TE.cpp  D_TM.cpp  F.cpp  F_reg1.cpp  F_reg2.cpp  F_reg3.cpp  F_static.cpp  V_int.cpp  chapter7_common.cpp  root_D_TM.cpp
Cap_09/: CMakeLists.txt  FEM_1D_1st.cpp  FEM_1D_solver.cpp  FEM_1D_solver.h  FEM_pp.cpp  FEM_pp.h  README.md  plot_fem.py
Cap_10/: CMakeLists.txt  Eigen2D.cpp  Eigen2D_LTQN.cpp  Makefile  README.md  Static2D.cpp
Cap_10/include/: LTQN.h  TEeig_err.h  curl_LTQN.h  edgemake.h  free_dof.h  free_nodes.h  free_nodes_mstrip.h  globals.h  plot_field.h  prescr_nodes_mstrip.h  renumber_dof.h  renumber_dof_LTQN.h  s_nodal.h  sandt.h  sandt_LTQN.h  simplex2D.h  tri_quad.h  trimesh.h  whitney.h
Cap_10/scripts/: plot_all_fields.py  plot_field.py  plot_field_microstrip.py
Cap_10/src/: LTQN.cpp  TEeig_err.cpp  curl_LTQN.cpp  edgemake.cpp  find_local_dofs.cpp  free_dof.cpp  free_nodes.cpp  free_nodes_mstrip.cpp  globals.cpp  nodal_1st.cpp  plot_field.cpp  prescr_nodes_mstrip.cpp  renumber_dof.cpp  renumber_dof_LTQN.cpp  s_nodal.cpp  sandt.cpp  sandt_LTQN.cpp  simplex2D.cpp  tri_quad.cpp  trimesh.cpp  whitney.cpp
Cap_11/: CMakeLists.txt  Eigen3D_CTLN.cpp  Eigen3D_LTQN.cpp  Eigen3D_v0.cpp  FETD_FDTD.cpp  README.md  test_tet_quad.cpp
Cap_11/include/: LTQN3D.hpp  TE_cavity_modes3D.hpp  avg_mesh_length.hpp  brick_mesh.hpp  cavity_modes3D.hpp  curl_LTQN3D.hpp  edgemake3D.hpp  eig_err3D.hpp  facemake3D.hpp  free_dof3D.hpp  free_dof3D_LTQN.hpp  free_nodes3D.hpp  globals3d.hpp  internal_tet_mesh.hpp  read_gmsh2.hpp  renumber_dof3D.hpp  renumber_dof3D_LTQN.hpp  sandt3D.hpp  sandt3D_LTQN.hpp  tet_quad.hpp
Cap_11/scripts/: plot_cap11.py
Cap_11/src/: LTQN3D.cpp  TE_cavity_modes3D.cpp  avg_mesh_length.cpp  brick_mesh.cpp  cavity_modes3D.cpp  curl_LTQN3D.cpp  edgemake3D.cpp  eig_err3D.cpp  facemake3D.cpp  free_dof3D.cpp  free_dof3D_LTQN.cpp  free_nodes3D.cpp  globals3d.cpp  internal_tet_mesh.cpp  read_gmsh2.cpp  renumber_dof3D.cpp  renumber_dof3D_LTQN.cpp  sandt3D.cpp  sandt3D_LTQN.cpp  tet_quad.cpp
